small layout fix to avoid scrollbar on profile page

--- a/components/ProfilePage/profile_page.module.scss
+++ b/components/ProfilePage/profile_page.module.scss
@@ -42,7 +42,7 @@
       align-items: center;
       // justify-content: center;
       flex-grow: 1;
-      max-height: calc(100vh - 213px);
+      max-height: calc(100vh - 213px - 108px);
       overflow-y: scroll;
       padding-bottom: 1em;
     }
